@@ -71,7 +71,7 @@ public class Main extends Application {
         try {
             // 关闭所有窗口
             ObservableList<Window> windows = Window.getWindows();
-            windows.getFirst().hide();
+            windows.get(0).hide();
             controller.close();
             // 重新启动主应用
             Stage primaryStage = new Stage();
@@ -251,6 +251,18 @@ public class Main extends Application {
     @Listener
     private void onBrowseEvent(BrowseEvent event) {
         getHostServices().showDocument(event.getUri().toString());
+    }
+
+    @Override
+    public void stop() throws Exception {
+        try {
+            ClassLoader customLoader = Thread.currentThread().getContextClassLoader();
+            if (customLoader instanceof LibraryClassLoader) {
+                ((LibraryClassLoader) customLoader).close();
+            }
+        } finally {
+            super.stop();
+        }
     }
 
     public MainController getController() {
